Fix images being stretched

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -89,3 +89,7 @@ p.error {
 .error {
   color: lightcoral;
 }
+
+img {
+  object-fit: contain;
+}
